# store

./: pyproject.toml
src/apps/likes/: models.py
src/apps/store/: models.py  urls.py  views.py
src/apps/tags/: models.py
src/core/: settings.py  urls.py
